Add Happy Tag In-Page Push ad script

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
             }
         }
     </script>
+    <!-- Happy Tag In-Page Push Ads -->
+    <script>(function (s) { s.dataset.zone = '10646261', s.src = 'https://nap5k.com/tag.min.js' })([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 
     <style type="text/tailwindcss">
         body { font-family: 'Manrope', 'Hind Siliguri', sans-serif; background-color: #ffffff; -webkit-tap-highlight-color: transparent; }
