Change heading to 'Gmail Free Tool' and button to 'Gmail Create'

--- a/index.html
+++ b/index.html
@@ -150,12 +150,12 @@
                     <div class="absolute inset-0 bg-primary/10 blur-3xl rounded-full"></div>
                     <i data-lucide="globe" class="text-primary w-20 h-20 relative z-10"></i>
                 </div>
-                <h2 class="text-2xl font-black mb-4 text-slate-800">কাজ শুরু করুন</h2>
+                <h2 class="text-2xl font-black mb-4 text-slate-800">Gmail Free Tool</h2>
                 <p class="text-slate-500 text-center mb-8 text-sm leading-relaxed">জিমেইল তৈরি করার জন্য নিচের বাটনে
                     ক্লিক করে ব্রাউজার খুলুন। প্রতি জিমেইল ক্রিয়েশনে পাবেন আকর্ষণীয় রিওয়ার্ড।</p>
                 <button onclick="window.handleOpenBrowser()"
-                    class="w-full max-w-sm green-gradient text-white py-4 rounded-3xl font-bold shadow-xl active:scale-95 transition-all hover:shadow-primary/40">ব্রাউজার
-                    খুলুন</button>
+                    class="w-full max-w-sm green-gradient text-white py-4 rounded-3xl font-bold shadow-xl active:scale-95 transition-all hover:shadow-primary/40">Gmail
+                    Create</button>
             </div>
 
             <!-- VIEW: Home (Earn) -->
