Move language switcher into Account Settings in profile view

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                         class="w-full h-full object-cover">
                 </div>
                 <h1 class="text-3xl font-black text-primary">Gmail Father</h1>
-                <p id="auth-desc" class="text-slate-500 text-sm font-medium">আপনার অ্যাকাউন্ট তৈরি করার বিশ্বস্ত অ্যাপ</p>
+                <p id="auth-desc" class="text-slate-500 text-sm font-medium">আপনার অ্যাকাউন্ট তৈরি করার বিশ্বস্ত অ্যাপ
+                </p>
             </div>
 
             <div class="bg-white p-8 rounded-[2.5rem] shadow-2xl border border-border-light">
@@ -137,15 +138,6 @@
                     class="w-9 h-9 rounded-xl shadow-sm border border-slate-100">
                 <h1 class="text-base font-black text-slate-800 tracking-tight">Gmail Father</h1>
             </div>
-            <!-- Language Switcher -->
-            <div class="flex items-center gap-1">
-                <button onclick="window.setLang('bn')" id="lang-bn"
-                    class="text-xs font-black px-2 py-1 rounded-lg border border-primary/30 bg-primary/10 text-primary transition-all">বাং</button>
-                <button onclick="window.setLang('en')" id="lang-en"
-                    class="text-xs font-black px-2 py-1 rounded-lg border border-slate-200 text-slate-400 transition-all">EN</button>
-                <button onclick="window.setLang('ru')" id="lang-ru"
-                    class="text-xs font-black px-2 py-1 rounded-lg border border-slate-200 text-slate-400 transition-all">RU</button>
-            </div>
 
             <div class="bg-primary/10 px-3 py-1.5 rounded-2xl border border-primary/20 flex items-center gap-2">
                 <i data-lucide="database" class="w-3.5 h-3.5 text-primary fill-current"></i>
@@ -188,7 +180,8 @@
                                 <i data-lucide="gift" class="text-primary w-12 h-12"></i>
                             </div>
                             <span class="font-black text-slate-800 text-xl tracking-tight">পয়েন্ট নিন</span>
-                            <span id="earn-btn-sub" class="text-xs font-bold text-primary uppercase tracking-widest">+১ ক্রেডিট</span>
+                            <span id="earn-btn-sub" class="text-xs font-bold text-primary uppercase tracking-widest">+১
+                                ক্রেডিট</span>
                         </button>
                         <div class="absolute inset-0 bg-primary/20 blur-3xl rounded-full animate-pulse"></div>
                     </div>
@@ -278,28 +271,42 @@
 
                 <div class="grid grid-cols-2 gap-4 mb-8">
                     <div class="bg-slate-50 p-5 rounded-3xl border border-slate-100 text-center">
-                        <p id="total-credits-label" class="text-[9px] font-black text-slate-400 uppercase tracking-widest mb-1">মোট ক্রেডিট</p>
+                        <p id="total-credits-label"
+                            class="text-[9px] font-black text-slate-400 uppercase tracking-widest mb-1">মোট ক্রেডিট</p>
                         <p id="stats-credits" class="text-lg font-black text-primary">0</p>
                     </div>
                     <div class="bg-slate-50 p-5 rounded-3xl border border-slate-100 text-center">
-                        <p id="activity-label" class="text-[9px] font-black text-slate-400 uppercase tracking-widest mb-1">অ্যাক্টিভিটি</p>
+                        <p id="activity-label"
+                            class="text-[9px] font-black text-slate-400 uppercase tracking-widest mb-1">অ্যাক্টিভিটি</p>
                         <p id="stats-ads" class="text-lg font-black text-slate-800">0</p>
                     </div>
                 </div>
 
                 <div class="space-y-3">
-                    <button
-                        class="w-full p-5 bg-white border border-slate-100 rounded-2xl flex items-center justify-between group hover:border-primary/30 transition-all shadow-sm">
-                        <div class="flex items-center gap-4">
+                    <!-- Language Setting -->
+                    <div class="w-full p-5 bg-white border border-slate-100 rounded-2xl shadow-sm">
+                        <div class="flex items-center gap-4 mb-4">
                             <div
                                 class="w-10 h-10 rounded-xl bg-primary/10 text-primary flex items-center justify-center">
                                 <i data-lucide="settings" class="w-5 h-5"></i>
                             </div>
                             <span class="font-bold text-slate-700">Account Settings</span>
                         </div>
-                        <i data-lucide="chevron-right" class="text-slate-200 group-hover:text-primary"></i>
-                    </button>
-                    <button onclick="window.handleLogout()"
+                        <p class="text-[10px] font-black text-slate-400 uppercase tracking-widest mb-3">Language / ভাষা
+                            / Язык</p>
+                        <div class="flex items-center gap-2">
+                            <button onclick="window.setLang('bn')" id="lang-bn"
+                                class="flex-1 py-2 text-xs font-black rounded-xl border border-primary/30 bg-primary/10 text-primary transition-all">🇧🇩
+                                বাংলা</button>
+                            <button onclick="window.setLang('en')" id="lang-en"
+                                class="flex-1 py-2 text-xs font-black rounded-xl border border-slate-200 text-slate-400 transition-all">🇬🇧
+                                English</button>
+                            <button onclick="window.setLang('ru')" id="lang-ru"
+                                class="flex-1 py-2 text-xs font-black rounded-xl border border-slate-200 text-slate-400 transition-all">🇷🇺
+                                Русский</button>
+                        </div>
+                    </div>
+                    <button id="logout-btn" onclick="window.handleLogout()"
                         class="w-full py-5 rounded-3xl text-red-500 bg-red-50 font-black uppercase text-xs tracking-widest border border-red-100 active:scale-95 transition-all shadow-sm">লগআউট</button>
                 </div>
             </div>
@@ -311,25 +318,29 @@
             <button onclick="window.showView('home')"
                 class="nav-btn flex flex-col items-center gap-1.5 text-slate-300 group transition-all" data-view="home">
                 <i data-lucide="zap" class="w-6 h-6 transition-transform group-active:scale-90"></i>
-                <span id="nav-earn-text" class="nav-earn text-[9px] font-bold uppercase tracking-wider font-display">EARN</span>
+                <span id="nav-earn-text"
+                    class="nav-earn text-[9px] font-bold uppercase tracking-wider font-display">EARN</span>
             </button>
             <button onclick="window.showView('browser')"
                 class="nav-btn flex flex-col items-center gap-1.5 text-slate-300 group transition-all"
                 data-view="browser">
                 <i data-lucide="layout-grid" class="w-6 h-6 transition-transform group-active:scale-90"></i>
-                <span id="nav-work-text" class="nav-work text-[9px] font-bold uppercase tracking-wider font-display">WORK</span>
+                <span id="nav-work-text"
+                    class="nav-work text-[9px] font-bold uppercase tracking-wider font-display">WORK</span>
             </button>
             <button onclick="window.showView('leaderboard')"
                 class="nav-btn flex flex-col items-center gap-1.5 text-slate-300 group transition-all"
                 data-view="leaderboard">
                 <i data-lucide="trophy" class="w-6 h-6 transition-transform group-active:scale-90"></i>
-                <span id="nav-rank-text" class="nav-rank text-[9px] font-bold uppercase tracking-wider font-display">RANK</span>
+                <span id="nav-rank-text"
+                    class="nav-rank text-[9px] font-bold uppercase tracking-wider font-display">RANK</span>
             </button>
             <button onclick="window.showView('profile')"
                 class="nav-btn flex flex-col items-center gap-1.5 text-slate-300 group transition-all"
                 data-view="profile">
                 <i data-lucide="user" class="w-6 h-6 transition-transform group-active:scale-90"></i>
-                <span id="nav-user-text" class="nav-user text-[9px] font-bold uppercase tracking-wider font-display">USER</span>
+                <span id="nav-user-text"
+                    class="nav-user text-[9px] font-bold uppercase tracking-wider font-display">USER</span>
             </button>
         </nav>
     </div>
